What's New for OpenJPEG

* : fixed
- : removed
! : changed
+ : added

November 9, 2011
* [mickael] WIP: fix get_decoded_tile function to avoid error with output image
* [mickael] fix bug with mj2 applications (credit to winfried)
+ [mickael] enhance mj2 when read jp2h (credit to winfried)
+ [mickael] check if the file extension is the same as the infile format (credit to winfried)
+ [jmalik] add some sanity check in CMakeLists to prevent STRING(REGEX..) call issues

November 8, 2011
+ [mickael] WIP: add get_decoded_tile functionality
+ [mickael] WIP: clean and enhance j2K file
+ [mickael] WIP: clean and enhance openjpeg.c
+ [mickael] WIP: clean and enhance openjpeg.h and add deprecated macro

October 25, 2011
+ [mickael] WIP: add a file to exclude some valgrind errors (detected with ctest_memcheck) related to png lib found with ubuntu10.04 platform 
* [mickael] WIP: solve problems with reading of elements outside the tilec->data buffer in dwt

October 21, 2011
+ [mickael] WIP: manage output image with area correponding to the set decoded area
+ [mickael] WIP: enhance codestream index generation

October 20, 2011
* [mickael] WIP: isolate dump test suite
* [mickael] WIP: remove memory leak about new jp2_read_marker function
* [mickael] WIP: remove previous commit about memory leak with ppm read function
* [mickael] WIP: solve memory leak with ppm read function

October 19, 2011
* [mickael] WIP: solve problem with writing of tga image from an image with signd=1 (credit to Winfried)
* [mickael] WIP: resolve some memory leak in compare functions

October 12, 2011
* [mickael] WIP: resolve heap corruption with p0_07.j2k (credit to Winfried)
* [mickael] WIP: correct some memory leaks in applications functions 
+ [mickael] WIP: add a read CBD marker function (JPEG2000 part 2)
+ [mickael] WIP: add a read MCO marker function (JPEG2000 part 2) 
+ [mickael] WIP: add a read MCC marker function (JPEG2000 part 2) 
+ [mickael] WIP: add a read MCT marker function (JPEG2000 part 2) 
