@@ -5,6 +5,15 @@ What's New for OpenJPEG
 ! : changed
 + : added
 
+November 17, 2011
+* [mickael] WIP: fix bug when decoding an area or a tile with special resolution
++ [mickael] WIP: enhance j2k_to_image with new get_decoded_tile functionality
++ [mickael] WIP: clean j2k_dump and enhance j2k_dump with commit 1052.
++ [mickael] WIP: add a set decoded resolution factor function and update j2k_to_image help about decoded region.
+
+November 9, 2011
+* [mickael] WIP: fix tests/nonregresion/CMakeList.txt
+
 November 9, 2011
 * [mickael] WIP: fix get_decoded_tile function to avoid error with output image
 * [mickael] fix bug with mj2 applications (credit to winfried)
